# codAi

./: README.md  config.py  function_call.py  function_schemas.py  main.py  pyproject.toml
codai/: config.py  function_call.py  main.py
codai/functions/: get_file_contents.py  get_files_info.py  run_python_file.py  write_file.py
demo_calc_app/pkg/: hello.py
functions/: get_file_contents.py
